# Clawdette

./: .gitignore  QueryEngine.md  README.md  Task.md  claudia  commands.md  cost-tracker.md
bootstrap/: state.md
bridge/: bridgePointer.md  bridgeStatusUtil.md  bridgeUI.md  capacityWake.md  codeSessionApi.md  createSession.md  debugUtils.md  envLessBridgeConfig.md  flushGate.md  inboundAttachments.md  jwtUtils.md  replBridge.md  replBridgeTransport.md
buddy/: CompanionSprite.tsx.md  companion.md  sprites.md  types.md  useBuddyNotification.tsx.md
claudette/: AppState.md  FILE_TEMPLATE.md  IMPLEMENTATION_CHECKLIST.md  OVERVIEW.md  QueryEngine.md  START-HERE.md  STEP-BY-STEP.md  Task.md  Tool.md  Tool.ts.md  claude.md  commands.md  context.md  cost-tracker.md  dialogLaunchers.md  history.md  interactiveHelpers.md  main.md  query.md  replLauncher.md  setup.md  tools.md
claudette-builder/: package.json
cli/: exit.md  ndjsonSafeStringify.md  print.md  remoteIO.md  structuredIO.md
commands/: bridge-kick.md  brief.md  commit-push-pr.md  commit.md  createMovedToPluginCommand.md  init-verifiers.md  init.md  insights.md  review.md  security-review.md  statusline.md  ultraplan.md  version.md
context/: fpsMetrics.md  mailbox.md  modalContext.md  notifications.md  overlayContext.md  promptOverlayContext.md  voice.md
entrypoints/: agentSdkTypes.md  cli.md
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs  main.rs  markdown.rs
examples/rust/src/api/: client.rs  stream.rs
examples/rust/src/tui/: app.rs
examples/tk/: PRD.md  claudette.py  pyproject.toml
examples/tk/src/tk/: __init__.py  api.py  config.py  main.py  models.py  prompts.py  query.py  tools.py  ui.py
hooks/: useExitOnCtrlCD.md  useExitOnCtrlCDWithKeybindings.md  (+6 more)
tk/: ui.py  (+3 more)
(+1979 files in other folders)
