[package]
name = "claudette-rs"
version = "0.1.0"
edition = "2021"
description = "A terminal-based AI coding agent, ported to Rust"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / API
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Schema validation
schemars = "0.8"
validator = { version = "0.19", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
regex = "1"
walkdir = "2"
lru = "0.12"
parking_lot = "0.12"
colored = "2"
unicode-width = "0.2"
shell-words = "1"
git2 = "0.19"
notify = "7"
ignore = "0.4"
 fuzzy-matcher = "0.3"
 urlencoding = "2"
 pulldown-cmark = "0.10"
 md-tui = "0.9"

 [[bin]]
name = "claudette"
path = "src/main.rs"
