[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tk-claudette"
version = "0.1.0"
description = "A desktop GUI AI coding agent built with Python and Tkinter"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
tk-claudette = "tk.main:main"
